--- a/index.html
+++ b/index.html
@@ -70,43 +70,8 @@
     <a href="#">Projetos</a>
     >
   </div>
-
   <div class="container">
-    <h2>Playlist pesonalizadas, atualizadas o tempo todo </h2>
-
-  <div class="container">
-    <h2>Curadoria musical é o processo de escolha entre todas as estéticas sonoras, artistas e músicas disponíveis a partir de uma pesquisa musical para definir aquelas que são mais adequadas para expressar alguma mensagem.
-        Playlist pesonalizadas de acordo com o publico alvo
-    </h2>
-    <div class="content">
-      <div class="column">
-        <h3>Rap & Chill </h3>
-        <div class="music-player">
-          <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/br/playlist/clube-mpb/pl.568624b7bd0648bcb339938b8a639f65"></iframe>
-        </div>
-        <p>Rap e chill music: uma combinação perfeita para relaxar e refletir. Esta playlist reúne alguns dos melhores hits do rap e da chill music de todos os tempos, com uma variedade de gêneros e estilos para agradar a todos os gostos. Seja você um fã de rap pesado ou de chill music suave, você vai encontrar algo para curtir nesta playlist.</p>
-      </div>
-      <div class="column">
-        <h3>Loop The sample MIX</h3>
-        <div class="music-player">
-         <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/br/playlist/clube-mpb/pl.568624b7bd0648bcb339938b8a639f65"></iframe>
-        </div>
-        <p>uma combinação explosiva de energia e atitude. Esta playlist reúne alguns dos melhores hits do rock e do metal de todos os tempos, com uma variedade de subgêneros para agradar a todos os gostos. Seja você um fã de rock clássico ou de metal extremo, você vai encontrar algo para curtir nesta playlist..</p>
-      </div>
-      <div class="column">
-        <h3>Coluna 3</h3>
-        <div class="music-player">
-          <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/br/playlist/clube-mpb/pl.568624b7bd0648bcb339938b8a639f65"></iframe>
-        </div>
-        <p>uma mistura contagiante de ritmo e melodia. Esta playlist reúne alguns dos melhores hits do reggae e da música popular brasileira de todos os tempos, com uma variedade de estilos para agradar a todos os gostos. Seja você um fã de reggae roots ou de MPB tradicional, você vai encontrar algo para curtir nesta playlist.
-
-Aqui estão alguns exemplos de músicas que você pode incluir na plalist</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="container">
-    <h2>IMAGENS</h2>
+    <h2>Tutoriais </h2>
     
     
   </div>
