--- a/index.html
+++ b/index.html
@@ -1,73 +1,181 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MOSCHIAT</title>
-  <style>
-    body {
-      background-color: black;
-      color: white;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      text-align: center;
-    }
-
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    .navbar {
-      background-color: #333;
-      padding: 10px 0;
-    }
-
-    .navbar a {
-      color: white;
-      text-decoration: none;
-      margin: 0 20px;
-    }
-
-    .main-image {
-      max-width: 100%;
-      height: auto;
-      display: block;
-      margin: 0 auto;
-      padding: 20px;
-
-    }
-
-
-
-    .content {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
-    }
-
-    .column {
-      width: 33.33%;
-      padding: 20px;
-    }
-
-    .music-player {
-      background-color: #333;
-      padding: 20px;
-    }
-
-  
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>MOSCHIAT</title>
+<style>
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #fff;
+}
+header {
+  background-color: #000;
+  text-align: center;
+  padding: 20px 0;
+}
+header img {
+  max-width: 100%;
+  height: auto;
+}
+nav {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-color: #333;
+  padding: 10px;
+}
+nav a {
+  color: #fff;
+  text-decoration: none;
+  margin: 5px 15px;
+}
+.container {
+  position: relative;
+  max-width: 100%;
+}
+.mySlides img {
+  width: 100%;
+  max-height: 400px; /* Limita a altura das imagens */
+  object-fit: cover; /* Garante que as imagens cubram o espaço disponível sem distorcer */
+}
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 3px;
+  user-select: none;
+}
+.next {
+  right: 0;
+}
+.prev:hover, .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.caption-container {
+  text-align: center;
+  background-color: #222;
+  color: white;
+  padding: 2px 16px;
+}
+.content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 20px;
+}
+.content > section, .content > aside {
+  flex: 1;
+  min-width: 300px; /* Garante que o layout se adapte a telas estreitas */
+  margin: 10px;
+}
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+  margin-top: 20px;
+}
+@media screen and (max-width: 768px) {
+  .content {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+</style>
 </head>
 <body>
-  <img class="main-image" src="https://1.bp.blogspot.com/-7dOxTmshjp8/XkrYD1xd8rI/AAAAAAABCI4/iZnnnSu43p8zdRvTbbcZZ0_ZB36_NTp7wCK4BGAYYCw/s792/chiat%2B2.png" alt="Imagem Principal">
 
- 
-    
-    
+<header>
+  <img src="https://1.bp.blogspot.com/-7dOxTmshjp8/XkrYD1xd8rI/AAAAAAABCI4/iZnnnSu43p8zdRvTbbcZZ0_ZB36_NTp7wCK4BGAYYCw/s792/chiat%2B2.png" alt="MOSCHIAT Logo">
+</header>
+
+<nav>
+  <a href="#">Quem sou MOSCHIAT</a>
+  <a href="#">Identidade Visual</a>
+  <a href="#">Fotografia</a>
+  <a href="#">Produções</a>
+  <a href="#">Marketing</a>
+  <a href="#">Audiovisual</a>
+</nav>
+
+<div class="container">
+  <!-- Slideshow images -->
+  <div class="mySlides">
+    <div class="numbertext">1 / 3</div>
+    <img src="https://yeezy.com/cdn/shop/files/01_5b2d7fd4-5362-465a-b5e2-353a87890439.png" style="width:100%">
   </div>
+
+  <div class="mySlides">
+    <div class="numbertext">2 / 3</div>
+    <img src="https://yeezy.com/cdn/shop/files/3_7ed6b0d3-0333-465b-8d64-f6aa665309c7.png" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">3 / 3</div>
+    <img src="https://yeezy.com/cdn/shop/files/06_8dfeeb51-075e-4003-b03a-f914b69f9b0f.png" style="width:100%">
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+
+<div class="content">
+  <section>
+    <h2>Serviços</h2>
+    <p>Identidade Visual: Criamos identidades visuais marcantes que comunicam a essência da sua marca.</p>
+    <p>Fotografia: Capturamos momentos únicos com criatividade e técnica apurada.</p>
+    <p>Produções: Produzimos conteúdos audiovisuais de alta qualidade para diferentes plataformas.</p>
+    <p>Marketing: Desenvolvemos estratégias de marketing digital para engajar seu público-alvo.</p>
+    <p>Audiovisual: Oferecemos soluções completas em produção audiovisual, da concepção à finalização.</p>
+  </section>
+
+  <aside>
+    <iframe allow="encrypted-media" allowtransparency="true" frameborder="0" height="380" src="https://open.spotify.com/embed/user/inicud/playlist/5dC7zk3GEWPE8HT6e7KKdB" width="300"></iframe>
+    <!-- Icons placeholder -->
+  </aside>
+</div>
+
+<footer>
+  <p>Contato: seuemail@example.com | Telefone: (00) 0000-0000</p>
+  <p>© 2024 MOSCHIAT. Todos os direitos reservados.</p>
+</footer>
+
+<script>
+// JavaScript for the Slideshow
+let slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+  }
+  slides[slideIndex-1].style.display = "block";
+}
+</script>
+
 </body>
 </html>
