--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ nav {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  background-color: #333;
+  background-color: #000;
   padding: 10px;
 }
 nav a {
@@ -75,12 +75,13 @@ nav a {
   padding: 20px;
 }
 .content > section, .content > aside {
+ background-color: #FFF;
   flex: 1;
   min-width: 300px; /* Garante que o layout se adapte a telas estreitas */
   margin: 10px;
 }
 footer {
-  background-color: #333;
+  background-color: #FFF;
   color: #fff;
   text-align: center;
   padding: 10px;
@@ -145,10 +146,14 @@ footer {
     <iframe allow="encrypted-media" allowtransparency="true" frameborder="0" height="380" src="https://open.spotify.com/embed/user/inicud/playlist/5dC7zk3GEWPE8HT6e7KKdB" width="300"></iframe>
     <!-- Icons placeholder -->
   </aside>
+  <aside>
+    <iframe allow="encrypted-media" allowtransparency="true" frameborder="0" height="380" src="https://open.spotify.com/embed/user/inicud/playlist/5dC7zk3GEWPE8HT6e7KKdB" width="300"></iframe>
+    <!-- Icons placeholder -->
+  </aside>
 </div>
 
 <footer>
-  <p>Contato: seuemail@example.com | Telefone: (00) 0000-0000</p>
+  <p>Contato: moschiatad@gmail.com | Telefone: (31) 99238-0630</p>
   <p>© 2024 MOSCHIAT. Todos os direitos reservados.</p>
 </footer>
 
