--- a/index.html
+++ b/index.html
@@ -114,17 +114,17 @@ footer {
   <!-- Slideshow images -->
   <div class="mySlides">
     <div class="numbertext">1 / 3</div>
-    <img src="https://yeezy.com/cdn/shop/files/01_5b2d7fd4-5362-465a-b5e2-353a87890439.png" style="width:100%">
+    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjfWCydvXa08rLlkJwvuXdF4mL2Qj13bqwHY5Bswam6q6uMydAjvFI_qwdPN7fyDODFDlA2qKrUt7ErTC2o90tpNjz3KO-VosLyAhwbbddiVhcROQDH24YoG9c6mAQLchPhU1eunP3-4adVISRsc59lXC1IXath8JD2nE1ZLUpdA9zLPVVnsOYodSxwC6hq/s1556/1.png" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">2 / 3</div>
-    <img src="https://yeezy.com/cdn/shop/files/3_7ed6b0d3-0333-465b-8d64-f6aa665309c7.png" style="width:100%">
+    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhc3BSpvhx087XU0lO9majiTKLCZ-PBntmwpfUDJhJjj5hIa5ngwtTK5IrI-dQaDjU5OOI7O9C021ZMIDFv-Bl2Mg9U-1IBJ17FKLIreb9gqr7eQ_SnRO8GloqCwxLszHkcjIqeiD-2jB7fNsOWVNnDTgBCZXt3g62w9gAAJBVcAG2UQoTTGU3rTCYeH83K/s1556/2.png" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">3 / 3</div>
-    <img src="https://yeezy.com/cdn/shop/files/06_8dfeeb51-075e-4003-b03a-f914b69f9b0f.png" style="width:100%">
+    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgI_eeRXdEv6sl-CF-9m2exyHxo3BBKHJmrxjidXn0-u0CEa5aZ6IasVUpUa9aOIfdjn_dLyDL7P_QNZcZ0IvFwayeyTzX32QVbljdI7VOn-sv9OtFJHhUcCntS4GAvWsiY6zyf_cMLZQ9G_c8ZSA_aMYI3MR5HmJiEK5VzwWwcaeLIHsR31pyQj-f0tvVB/s1557/3.png" style="width:100%">
   </div>
 
   <!-- Next and previous buttons -->
@@ -147,7 +147,7 @@ footer {
     <!-- Icons placeholder -->
   </aside>
   <aside>
-    <iframe allow="encrypted-media" allowtransparency="true" frameborder="0" height="380" src="https://open.spotify.com/embed/user/inicud/playlist/5dC7zk3GEWPE8HT6e7KKdB" width="300"></iframe>
+    <iframe allow="encrypted-media" allowtransparency="true"  src="https://open.spotify.com/embed/user/inicud/playlist/5dC7zk3GEWPE8HT6e7KKdB" ></iframe>
     <!-- Icons placeholder -->
   </aside>
 </div>
