--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
 
     <article>
         <p>"A arte é o que eu faço você ver".</p>
+<p>好奇心旺盛な人は誰でも何かを得る</p>
+
     </article>
 
     <div class="content">
