--- a/index.html
+++ b/index.html
@@ -66,12 +66,7 @@
     </header>
 <div style="display: grid; place-items: center; height: 100px;">
    <nav>
-  <a href="#">Quem sou MOSCHIAT</a>
-  <a href="#">Identidade Visual</a>
-  <a href="#">Fotografia</a>
-  <a href="#">Produções</a>
-  <a href="#">Marketing</a>
-  <a href="#">Revista Download</a>
+ <center>PAGINA EM MANUTENCAO Até dia 13/03</center>
 </nav></div>
 
     <article>
@@ -80,21 +75,7 @@
 
     </article>
 
-    <div class="content">
-        <div class="description">
-            <p><iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1762143669&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/inicudrave" title="inicudrave" target="_blank" style="color: #cccccc; text-decoration: none;">inicudrave</a> · <a href="https://soundcloud.com/inicudrave/meta-unapologetic" title="Meta Unapologetic" target="_blank" style="color: #cccccc; text-decoration: none;">Meta Unapologetic</a></div></p>
-        </div>
-        <div class="soundcloud">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/KlsURAdTfCo?si=Bk5lT6lLIFEqByVr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-    </div>
- <form action="moschiat.com/portifolio" method="post">
-        <label for="senha">Senha:</label>
-        <input type="password" id="senha" name="Moschiat2024" required>
-        <button type="submit">Acessar</button>
-    </form>
-
-
+    
     <footer>
         <p>© 2024 MOSCHIAT. Todos os direitos reservados.</p>
     </footer>
