--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </header>
 <div style="display: grid; place-items: center; height: 100px;">
    <nav>
- <center>PAGINA EM MANUTENCAO Até dia 13/03</center>
+ <center></center>
 </nav></div>
 
     <article>
