--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
 
     header img {
-      width: 100px; /* Ajuste o tamanho da imagem do logotipo */
+      width: 100px; /* Ajuste o tamanho da imagem */
     }
 
     nav {
@@ -61,7 +61,7 @@
 </head>
 <body>
   <header>
-    <img src="https://1.bp.blogspot.com/-7dOxTmshjp8/XkrYD1xd8rI/AAAAAAABCI4/iZnnnSu43p8zdRvTbbcZZ0_ZB36_NTp7wCK4BGAYYCw/s792/chiat%2B2.png" alt="Logotipo MOSCHIAT">
+    <img src="https://1.bp.blogspot.com/-7dOxTmshjp8/XkrYD1xd8rI/AAAAAAABCI4/iZnnnSu43p8zdRvTbbcZZ0_ZB36_NTp7wCK4BGAYYCw/s792/chiat%2B2.png" alt="">
   </header>
 
   <nav>
@@ -81,9 +81,32 @@
     <div class="soundcloud">
       <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1758841359&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
     </div>
+    
+    
   </div>
 
   <footer>
+      <section class="section">
+  <h3>Acessórios Personalizados</h3>
+  <div class="itens-container">
+    <div class="item">
+      <img src="imagem-acessorio-1.jpg" alt="Acessório 1">
+      <p><b>Pulseira Nome Personalizada</b> - R$ 29,90</p>
+      <a href="https://api.whatsapp.com/send?phone=NUMERODESEUTELEFONE&text=Oi, quero saber mais sobre a Pulseira Nome Personalizada" class="whatsapp-button">Chamar no WhatsApp</a>
+    </div>
+    <div class="item">
+      <img src="imagem-acessorio-2.jpg" alt="Acessório 2">
+      <p><b>Colar Signo</b> - R$ 34,90</p>
+      <a href="https://api.whatsapp.com/send?phone=NUMERODESEUTELEFONE&text=Oi, quero saber mais sobre o Colar Signo" class="whatsapp-button">Chamar no WhatsApp</a>
+    </div>
+    <div class="item">
+      <img src="imagem-acessorio-3.jpg" alt="Acessório 3">
+      <p><b>Chaveiro Divertido</b> - R$ 19,90</p>
+      <a href="https://api.whatsapp.com/send?phone=NUMERODESEUTELEFONE&text=Oi, quero saber mais sobre o Chaveiro Divertido" class="whatsapp-button">Chamar no WhatsApp</a>
+    </div>
+  </div>
+</section>
+
     <p>&copy; 2024 MOSCHIAT. Todos os direitos reservados.</p>
   </footer>
 </body>
