--- a/index.html
+++ b/index.html
@@ -79,7 +79,89 @@
       </div>
 
     <div class="soundcloud">
-      <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1758841359&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+     Até 60% off no Next Pro para brasileiros. Uploads ilimitados, distribuição global e muito mais por apenas R$25 mensais. Assinar o Next Pro.
+
+No file chosen
+MOSCHIAT SET 2024
+inicudrave 
+há 9 segundoshá 9 segundos
+Quer que esta faixa alcance mais ouvintes?
+Estamos analisando sua faixa para ver se ela é elegível para ser recomendada aos ouvintes com maior probabilidade de adorá-la. A análise leva de vinte minutos a duas horas. Volte em breve para ver se sua faixa é elegível!
+Veja como funciona
+Escreva um comentário
+
+inicudrave
+ 1 seguidor1
+ 2 faixas2
+Tag:Electronic
+Tag:Trip Hop
+Adicionar tags
+Aqui estão algumas tags para ajudá-lo a começar.
+Adicione etiquetas para ajudar as pessoas a encontrarem a sua faixa.
+
+ 
+Parece que está um pouco quieto por aqui
+Seja o primeiro a comentar esta faixa
+Faixas relacionadas
+Exibir tudo
+Raymundo Salgado
+Gta Online (After Hours) The Black Madonna Full Liveset
+ 21.029 reproduções21K
+ Ver todas as curtidas580
+ Ver todas as republicações12
+ Ver todos os comentários14
+Baby Mario
+Beyoncé - BLACK IS KING (Full Album - Fanmade Version)
+ 65.203 reproduções65,2K
+ Ver todas as curtidas1.367
+ Ver todas as republicações25
+ Ver todos os comentários23
+Lindsey Carter
+BEYONCÉ (Full Album)
+ 2.578 reproduções2.578
+ Ver todas as curtidas109
+ Ver todas as republicações4
+ Ver todos os comentários6
+Baixe o app
+Baixar na AppStoreBaixar no Google Play
+Aviso Legal ⁃ Privacidade ⁃ Política de Cookies ⁃ Gerenciador de cookie ⁃ SoundCloud Ltd. ⁃ Recursos de Artista ⁃ Blog ⁃ Paradas ⁃
+Idioma: Português (Brasil)
+Ir para a anterior
+Reproduzir atual
+Ir para a próxima
+Shuffle
+Repetir faixa
+Tempo atual: 0 segundo0:00
+Duração: 1 hora 48 minutos 52 segundos1:48:52
+Volume
+Alternar mudo
+Little Miss Sunshine
+Faixa atual: Beyoncé - HOMECOMING THE LIVE ALBUM [Full Album]Beyoncé - HOMECOMING THE LIVE ALBUM [Full Album]
+
+Fechar
+Compartilhar
+Incorporado
+Mensagem
+Personalize seu player
+Código
+<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1836544659&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/inicudrave" title="inicudrave" target="_blank" style="color: #cccccc; text-decoration: none;">inicudrave</a> · <a href="https://soundcloud.com/inicudrave/moschiat-set-2024" title="MOSCHIAT SET 2024" target="_blank" style="color: #cccccc; text-decoration: none;">MOSCHIAT SET 2024</a></div>
+WordPress code
+Opções
+Cor:
+#ff5500
+#85706b
+#ecdee6
+#d0b094
+#bcb4ac
+#ff5500
+Toggle color chooser
+ Permitir reprodução automática
+ Exibir comentários
+ Exibir recomendações
+ Exibir sobreposições da SoundCloud
+
+inicudrave · MOSCHIAT SET 2024
+Este reprodutor usa cookies em conformidade com a nossa Política de Cookies. Podemos coletar dados sobre uso para efeitos de análise. É sua responsabilidade divulgar essa informação para os visitantes de qualquer website em que você incorpore o reprodutor.
     </div>
     
     
