--- a/index.html
+++ b/index.html
@@ -21,23 +21,6 @@
       text-align: left;
       border-bottom: 1px solid #ddd;
     }
-    #slideshow {
-      position: relative;
-      width: 100%;
-      max-width: 500px;
-      height: auto;
-      overflow: hidden;
-    }
-    #slideshow img {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      opacity: 0;
-      transition: opacity 1s ease-in-out;
-    }
-    #slideshow img.active {
-      opacity: 1;
-    }
     header, footer {
       text-align: center;
       padding: 20px;
@@ -45,7 +28,7 @@
       justify-content: center;
     }
     header img {
-      width: 80%; /* Alterado para 80% */
+      width: 80%;
       max-width: 600px;
       height: auto;
       display: block;
@@ -99,8 +82,8 @@
       border-radius: 8px;
       margin: 10px;
       padding: 20px;
-      width: calc(33.33% - 20px); /* Alterado para ocupar 1/3 da largura */
-      box-sizing: border-box; /* Adicionado para incluir padding na largura */
+      width: calc(33.33% - 20px);
+      box-sizing: border-box;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       text-align: center;
     }
@@ -136,19 +119,95 @@
       font-size: 1em;
       margin-top: 10px;
     }
-
     @media only screen and (max-width: 768px) {
       header img {
-        width: 90%; /* Alterado para 90% */
+        width: 90%;
       }
       .container {
         flex-direction: column;
         align-items: center;
       }
       .product {
-        width: 80%; /* Alterado para 80% */
-        margin: 10px 0; /* Alterado para adicionar espaçamento superior e inferior */
+        width: 80%;
+        margin: 10px 0;
       }
+    }
+
+    /* Slideshow styles */
+    .slideshow-container {
+      position: relative;
+      max-width: 100%;
+      margin: auto;
+    }
+    .mySlides {
+      display: none;
+    }
+    .prev,
+    .next {
+      cursor: pointer;
+      position: absolute;
+      top: 50%;
+      width: auto;
+      padding: 16px;
+      margin-top: -22px;
+      color: white;
+      font-weight: bold;
+      font-size: 18px;
+      transition: 0.6s ease;
+      border-radius: 0 3px 3px 0;
+      user-select: none;
+    }
+    .next {
+      right: 0;
+      border-radius: 3px 0 0 3px;
+    }
+    .prev:hover,
+    .next:hover {
+      background-color: rgba(0,0,0,0.8);
+    }
+    .text {
+      color: #f2f2f2;
+      font-size: 15px;
+      padding: 8px 12px;
+      position: absolute;
+      bottom: 8px;
+      width: 100%;
+      text-align: center;
+    }
+    .numbertext {
+      color: #f2f2f2;
+      font-size: 12px;
+      padding: 8px 12px;
+      position: absolute;
+      top: 0;
+    }
+    .dot {
+      cursor: pointer;
+      height: 15px;
+      width: 15px;
+      margin: 0 2px;
+      background-color: #bbb;
+      border-radius: 50%;
+      display: inline-block;
+      transition: background-color 0.6s ease;
+    }
+    .active,
+    .dot:hover {
+      background-color: #717171;
+    }
+    .fade {
+      -webkit-animation-name: fade;
+      -webkit-animation-duration: 1.5s;
+      animation-name: fade;
+      animation-duration: 1.5s;
+    }
+    @-webkit-keyframes fade {
+      from {opacity: .4}
+      to {opacity: 1}
+    }
+    @keyframes fade {
+      from {opacity: .4}
+      to {opacity: 1}
     }
   </style>
 </head>
@@ -169,104 +228,159 @@
   <img src="" alt=""> 
 
   <p style="text-align: center;">Sou apaixonado por criatividade e inovação em todas as formas. Este site é um reflexo da minha jornada criativa, um lugar onde compartilho minhas experiências, projetos e insights. Seja bem-vindo e explore comigo as infinitas possibilidades da arte e da tecnologia.</p>
- 
+  
+  <!-- Slideshow start -->
+  <div class="slideshow-container">
+    <div class="mySlides fade">
+      <div class="numbertext">1 / 3</div>
+      <img src="img_woods_wide.jpg" style="width:100%">
+      <div class="text">Caption Text</div>
+    </div>
+    <div class="mySlides fade">
+      <div class="numbertext">2 / 3</div>
+      <img src="img_5terre_wide.jpg" style="width:100%">
+      <div class="text">Caption Two</div>
+    </div>
+    <div class="mySlides fade">
+      <div class="numbertext">3 / 3</div>
+      <img src="img_mountains_wide.jpg" style="width:100%">
+      <div class="text">Caption Three</div>
+    </div>
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  <br>
+  <div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span> 
+    <span class="dot" onclick="currentSlide(2)"></span> 
+    <span class="dot" onclick="currentSlide(3)"></span> 
+  </div>
+  <!-- Slideshow end -->
+
   <div class="container">
     <div class="product">
-    
-<h2>Pacote Essencial</h2>
-<small>
-  <p>45 minutos de sessão</p>
-  <p>2 trocas de roupas</p>
-  <p>10 fotos digitais 2 impressas</p> 
-  <p>Fotos externas e espontâneas</p> 
-  <p>Pós-edição nas fotos</p>
-  <p>Todas fotos para download em alta resolução</p>
-</small>
-<div class="price">R$ 150,00</div>
-<a class="whatsapp-btn" href="https://wa.me/5531992380630?text=Tenho%20interesse%20no%20Produto%201" target="_blank">WhatsApp</a>
-</div>
-<div class="product">
+      <h2>Pacote Essencial</h2>
+      <small>
+        <p>45 minutos de sessão</p>
+        <p>2 trocas de roupas</p>
+        <p>10 fotos digitais 2 impressas</p> 
+        <p>Fotos externas e espontâneas</p> 
+        <p>Pós-edição nas fotos</p>
+        <p>Todas fotos para download em alta resolução</p>
+      </small>
+      <div class="price">R$ 150,00</div>
+      <a class="whatsapp-btn" href="https://wa.me/5531992380630?text=Tenho%20interesse%20no%20Produto%201" target="_blank">WhatsApp</a>
+    </div>
+    <div class="product">
+      <h2>Pacote Premium</h2>
+      <small>
+        <p>1h de sessão</p>
+        <p>Galeria online privada</p>
+        <p>20 fotos digitais e 3 impressas</p>
+        <p>3 trocas de roupas</p>
+        <p>Consultoria de imagem com coloração Pessoal</p>
+        <p>Fotos externas e espontâneas</p>
+        <p>Pós edição nas fotos</p>
+        <p>Todas fotos para download em alta resolução</p>
+      </small>
+      <div class="price">R$ 320,00</div>
+      <a class="whatsapp-btn" href="https://wa.me/5531992380630?text=Tenho%20interesse%20no%20Produto%202" target="_blank">WhatsApp</a>
+    </div>
+    <div class="product">
+      <h2>Pacote Deluxe</h2>
+      <small>
+        <p>1h30m minutos de sessão</p>
+        <p>Galeria online privada</p>
+        <p>30 fotos digitais e 3 impressas</p>
+        <p>Consultoria de imagem com coloração pessoal</p>
+        <p>Fotos Internas, externas e espontâneas</p>
+        <p>3 videos curtos estilos prontos para ser postados</p>
+        <p>Todas fotos para download em alta resolução</p>
+      </small>
+      <div class="price">R$ 500,00</div>
+      <a class="whatsapp-btn" href="https://wa.me/5531992380630?text=Tenho%20interesse%20no%20Produto%203" target="_blank">WhatsApp</a>
+    </div>
+  </div>
 
-<h2>Pacote Premium</h2>
-<small>
-  <p>1h de sessão</p>
-  <p>Galeria online privada</p>
-  <p>20 fotos digitais e 3 impressas</p>
-  <p>3 trocas de roupas</p>
-  <p>Consultoria de imagem com coloração Pessoal</p>
-  <p>Fotos externas e espontâneas</p>
-  <p>Pós edição nas fotos</p>
-  <p>Todas fotos para download em alta resolução</p>
-</small>
-<div class="price">R$ 320,00</div>
-<a class="whatsapp-btn" href="https://wa.me/5531992380630?text=Tenho%20interesse%20no%20Produto%202" target="_blank">WhatsApp</a>
-</div>
-<div class="product">
-<h2>Pacote Deluxe</h2>
-<small>
-  <p>1h30m minutos de sessão</p>
-  <p>Galeria online privada</p>
-  <p>30 fotos digitais e 3 impressas</p>
-  <p>Consultoria de imagem com coloração pessoal</p>
-  <p>Fotos Internas, externas e espontâneas</p>
-  <p>3 videos curtos estilos prontos para ser postados</p>
-  <p>Todas fotos para download em alta resolução</p>
-</small>
-<div class="price">R$ 500,00</div>
-<a class="whatsapp-btn" href="https://wa.me/5531992380630?text=Tenho%20interesse%20no%20Produto%203" target="_blank">WhatsApp</a>
-</div>
-</div>
+  <h2>Serviços</h2>
 
-<h2>Serviços</h2>
+  <table>
+    <tr>
+      <th>Serviço</th>
+      <th>Descrição</th>
+      <th>Investimento</th>
+    </tr>
+    <tr>
+      <td>Ensaios fotográficos</td>
+      <td>Ideal para você que precisa de material visual para futuros flyers e material promocional</td>
+      <td>R$ 120</td>
+    </tr>
+    <tr>
+      <td>Criação de filtros para instagram</td>
+      <td>Filtro exclusivo para seu instagram, com seu nome ou logo</td>
+      <td>R$ 90</td>
+    </tr>
+    <tr>
+      <td>Gravação de músicas demos</td>
+      <td>Gravação de vocais, lipsync, adlibs</td>
+      <td>A definir</td>
+    </tr>
+    <tr>
+      <td>Design de capas álbum/singles</td>
+      <td>Criação de artes 2D e 3D</td>
+      <td>A definir</td>
+    </tr>
+    <tr>
+      <td>Videos Lyrics</td>
+      <td>Destaque sua música e ganhe mais visibilidade com vídeos lyrics em formatos para Youtube, Instagram e reels</td>
+      <td>R$ 90</td>
+    </tr>
+    <tr>
+      <td>Criação de conteúdo para mídias sociais</td>
+      <td>Tenha 3 post por semana nas suas redes sociais ganhando visibilidade e gerando qualidade para sua página</td>
+      <td>R$ 30</td>
+    </tr>
+    <tr>
+      <td>Distribua sua músicas em todas plataformas digitais</td>
+      <td>Apple Music, Tidal, Amazon Music, TikTok, Spotify, Deezer, SoundCloud, Youtube...</td>
+      <td>R$ 350</td>
+    </tr>
+  </table>
 
-<table>
-<tr>
-  <th>Serviço</th>
-  <th>Descrição</th>
-  <th>Investimento</th>
-</tr>
-<tr>
-  <td>Ensaios fotográficos</td>
-  <td>Ideal para você que precisa de material visual para futuros flyers e material promocional</td>
-  <td>R$ 120</td>
-</tr>
-<tr>
-  <td>Criação de filtros para instagram</td>
-  <td>Filtro exclusivo para seu instagram, com seu nome ou logo</td>
-  <td>R$ 90</td>
-</tr>
-<tr>
-  <td>Gravação de músicas demos</td>
-  <td>Gravação de vocais, lipsync, adlibs</td>
-  <td>A definir</td>
-</tr>
-<tr>
-  <td>Design de capas álbum/singles</td>
-  <td>Criação de artes 2D e 3D</td>
-  <td>A definir</td>
-</tr>
-<tr>
-  <td>Videos Lyrics</td>
-  <td>Destaque sua música e ganhe mais visibilidade com vídeos lyrics em formatos para Youtube, Instagram e reels</td>
-  <td>R$ 90</td>
-</tr>
-<tr>
-  <td>Criação de conteúdo para mídias sociais</td>
-  <td>Tenha 3 post por semana nas suas redes sociais ganhando visibilidade e gerando qualidade para sua página</td>
-  <td>R$ 30</td>
-</tr>
-<tr>
-  <td>Distribua sua músicas em todas plataformas digitais</td>
-  <td>Apple Music, Tidal, Amazon Music, TikTok, Spotify, Deezer, SoundCloud, Youtube...</td>
-  <td>R$ 350</td>
-</tr>
-</table>
+  <h1>MOSCHIAT SET 2024</h1>
+  <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1836544659&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
-<h1>MOSCHIAT SET 2024</h1>
-<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1836544659&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+  <footer>
+    <p>&copy; 2024 MOSCHIAT. Todos os direitos reservados.</p>
+  </footer>
 
-<footer>
-<p>&copy; 2024 MOSCHIAT. Todos os direitos reservados.</p>
-</footer>
+  <script>
+    let slideIndex = 1;
+    showSlides(slideIndex);
+
+    function plusSlides(n) {
+      showSlides(slideIndex += n);
+    }
+
+    function currentSlide(n) {
+      showSlides(slideIndex = n);
+    }
+
+    function showSlides(n) {
+      let i;
+      let slides = document.getElementsByClassName("mySlides");
+      let dots = document.getElementsByClassName("dot");
+      if (n > slides.length) {slideIndex = 1}
+      if (n < 1) {slideIndex = slides.length}
+      for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";
+      }
+      for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+      }
+      slides[slideIndex-1].style.display = "block";
+      dots[slideIndex-1].className += " active";
+    }
+  </script>
 </body>
 </html>
